data/derived/fa15/progs/unify/prog0673.ml.out
Characters 152-156:
  seen in
  ^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
